<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- App id -->
  <string name="google_app_id">1:637667919264:android:0bb0f94dc764e9f3</string>
  <string name="youtube_api" translatable="false">AIzaSyBadk6TBj3YYh2zXN8qMiQMLRwR1klzaVQ</string>
  <string name="app_name" translatable="false">BabyNanas</string>
  <string name="drawer_header_text">Menu</string>
  <string name="action_settings">Preferences</string>
  <string name="nanas">Lullabies</string>
  <string name="relax">Relax</string>
  <string name="classical">Classical</string>
  <string name="configuration">Configuration</string>
  <string name="about">About us</string>
  <string name="play_in_bucle">Continuous reproduction</string>
  <string name="play_in_bucle_summary">Mark to repeat the music when the song ends</string>
  <string name="pref_reproduction">Reproduction preferences</string>
  <string name="stop_play">Stop Reproduction</string>
  <string name="stop_play_summary">Select how long you want to play the music, when this time passes the music will stop automatically</string>
  <string name="title_activity_my_preferences">Preferences</string>
  <string name="share_this_app">Share the app</string>
  <string name="feedback">Share your feedback</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">"Recommendations for people to contact based     on your message history   "</string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="pref_language_list_values" translatable="false">
    <item>en</item>
    <item>es</item>
    <item>en</item>
    <item>de</item>
    <item>fr</item>
    <item>ca</item>
    <item>pt</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value"/>

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>
  <string name="dark_theme">dark</string>
  <string name="light_theme">light</string>
  <string name="custom_theme">custom</string>
  <string name="play_button" translatable="false">Play Button</string>
  <string name="dream_makers">Dream creators</string>
  <string name="slogan">We bring mobile apps to those who need them.</string>
  <string name="sleep_countdown">Sleep</string>
  <string name="sleeping_message">Music will stop in %1$d minutes</string>
  <string name="repeat">repeat</string>
  <string name="pref_title_dialog_sel_language">Select Language</string>
  <string name="pref_title_sel_language">Language</string>
  <string name="youtube_nanas" translatable="false">Youtube Channel</string>
  <!-- banner real si el cliquem desde test google ens bloquejara compte-->
  <!--<string name="banner_ad_unit_id">ca-app-pub-9062394636198838/2033691508</string>-->

</resources>