<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/pref_reproduction">
  <CheckBoxPreference
    android:defaultValue="false"
    android:key="bucle"
    android:summary="@string/play_in_bucle_summary"
    android:title="@string/play_in_bucle" />
  <ListPreference
    android:defaultValue="15"
    android:entries="@array/listTimeArray"
    android:entryValues="@array/listTimeValues"
    android:key="stopPlay"
    android:summary="@string/stop_play_summary"
    android:title="@string/stop_play" />
  <ListPreference
      android:key="language"
      android:defaultValue="default"
      android:dialogTitle="@string/pref_title_dialog_sel_language"
      android:negativeButtonText="@null"
      android:positiveButtonText="@null"
      android:title="@string/pref_title_sel_language" />
</PreferenceScreen>